Style planet data and fix layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -17,13 +17,13 @@
 body {
   display: flex;
   min-height: 100vh;
-  width: 100%;
+  width: 100vw;
   position: relative;
   margin: 0;
   color: #fff;
   background-color: #1c1c1c;
   font-family: "Ubuntu", "Anek Telugu", "Open Sans";
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 a {
